[project]
name = "udemy-learnlangchainlanggraphbybuildingaiagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.31",
    "python-dotenv>=1.1.1",
]
